--- a/gradle/gitlab-ci-gradle.yml
+++ b/gradle/gitlab-ci-gradle.yml
@@ -39,8 +39,6 @@ stages:
 
 gradle-build:
   extends: .job_gradle_build_template
-  before_script:
-    - *gradle-scripts
   rules:
     # exclude merge requests
     - if: '$CI_MERGE_REQUEST_ID == null'
@@ -51,3 +49,36 @@ gradle-build:
       when: manual
     - if: $CI_COMMIT_TAG
       when: always
+
+
+.job_gradle_build_template:
+  stage: build
+  image: $GRADLE_IMAGE
+  script:
+    - - *gradle-scripts
+    - cat build.gradle
+    # 刪除其他環境設定檔
+    - clear_env_resource
+    # 裝 Docker
+    - install_docker_cli
+    # 開始包版
+    - gradle --no-daemon clean build jacocoTestReport bootBuildImage --imageName=${BUILD_IMAGE_NAME}:${BUILD_IMAGE_TAG}
+    # 顯示涵蓋率
+    - output_jacoco_coverage
+    - docker save -o ${BUILD_IMAGE_NAME}_${BUILD_IMAGE_TAG}.tar ${BUILD_IMAGE_NAME}:${BUILD_IMAGE_TAG}
+  coverage: '/^(\d+.\d+\%) covered$/'
+  artifacts:
+    name: "$CI_JOB_NAME artifacts from $CI_PROJECT_NAME on $CI_COMMIT_REF_SLUG"
+    expire_in: 1 day
+    reports:
+      junit:
+        - "**/build/test-results/test/TEST-*.xml"
+    paths:
+      - "**/build/"
+      - ${BUILD_IMAGE_NAME}_${BUILD_IMAGE_TAG}.tar
+  cache:
+    key: "$CI_PROJECT_NAME"
+    paths:
+      - .gradle
+    policy: pull-push
+
