--- a/gradle/gitlab-ci-gradle.yml
+++ b/gradle/gitlab-ci-gradle.yml
@@ -20,6 +20,18 @@ stages:
   # BEGSCRIPT
   set -e
 
+  
+  function prepare_build_info () {
+    if [ $CI_COMMIT_TAG ]; then BUILD_IMAGE_TAG=$CI_COMMIT_TAG
+      elif [ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]; then BUILD_IMAGE_TAG=RC.$CI_PIPELINE_ID
+      else BUILD_IMAGE_TAG=beta.$CI_PIPELINE_ID
+    fi
+    echo "BUILD_IMAGE_TAG=$BUILD_IMAGE_TAG" >> build_info.env
+    echo "BUILD_IMAGE_NAME=$CI_PROJECT_NAME" >> build_info.env
+    BUILD_IMAGE_NAME=$CI_PROJECT_NAME
+    BUILD_IMAGE_TAG=$BUILD_IMAGE_TAG
+  }
+
   function clear_env_resource () {
     rm -f src/main/resources/application-*.yml
     rm -rf src/main/resources/config
@@ -61,6 +73,7 @@ gradle-build:
     - clear_env_resource
     # 裝 Docker
     - install_docker_cli
+    - prepare_build_info
     # 開始包版
     - gradle --no-daemon clean build jacocoTestReport bootBuildImage --imageName=${BUILD_IMAGE_NAME}:${BUILD_IMAGE_TAG}
     # 顯示涵蓋率
@@ -71,6 +84,7 @@ gradle-build:
     name: "$CI_JOB_NAME artifacts from $CI_PROJECT_NAME on $CI_COMMIT_REF_SLUG"
     expire_in: 1 day
     reports:
+      dotenv: build_info.env
       junit:
         - "**/build/test-results/test/TEST-*.xml"
     paths:
