--- a/gradle/gitlab-ci-gradle.yml
+++ b/gradle/gitlab-ci-gradle.yml
@@ -67,7 +67,7 @@ gradle-build:
   stage: build
   image: $GRADLE_IMAGE
   script:
-    - - *gradle-scripts
+    - *gradle-scripts
     - cat build.gradle
     # 刪除其他環境設定檔
     - clear_env_resource
