fix: test docker service

--- a/gradle/gitlab-ci-gradle.yml
+++ b/gradle/gitlab-ci-gradle.yml
@@ -66,6 +66,9 @@ gradle-build:
 .job_gradle_build_template:
   stage: build
   image: $GRADLE_IMAGE
+  services:
+    - name: docker:dind
+      alias: docker
   script:
     - *gradle-scripts
     - cat build.gradle
